# chemical-park-monitor

./: .claude.md  .gitignore  AGENTS.md  Pinn改进方案.md  README.md  knowledge-network.html  pyproject.toml  sensor_audit.py  startup.bat  化工园区智能监测项目 Skills 技能文档.md  气体扩散反演_DStarLite_从0开始技术文档.md  监控点位说明.md
.github/: README.md  WORKFLOWS.md
Back/: pom.xml
GasModelTest/: README.md  config.json  generate_dataset.py  test_forward_model.py
Manage/: .env.development  .env.production  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
algorithm/: PATH_GAS_CONSTRAINTS.md  README.md  __init__.py  apiServer.py  api_server.py  benchmark_replan_10k.py  gasDiffusionAstar.py  polo.py  requirements.txt  response_utils.py  test_path_hazard_avoidance.py  test_pinn_inversion.py
algorithm_tests/: README.md  config.json  generate_dataset.py  test_forward_model.py
assets/: README.md
backend/: README.md  pom.xml
config/: README.md
datasets/: README.md
db/: README.md  manifest.json
deploy/: .env.example  3d_viewer.html  README.md  docker-compose.yml  scp_json_to_xml.py
docker/: README.md
docs/: README.md  api-reference.md  architecture.md  changelog.md  coding-standards.md  dataset-sources.md  development-guide.md  login-startup-troubleshooting.md  pinn_inversion_analysis.md  real-dom-map-sensor-layout.md  sensor-placement-guide.md  technical-route-to-deployment.md  传感器风险等级划分标准.md  项目总体要求.md
frontend/: .env.development  .env.production  .stylelintrc.cjs  README.md  index.html  package-lock.json  package.json  vite.config.ts
(+253 files in other folders)
