[project]
name = "chemical-park-monitoring"
version = "1.0.0"
description = "化工园区智能监测系统 - Python 算法模块"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn>=0.42.0",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0",
    "torch>=2.10.0",
    "ultralytics>=8.4.28",
    "pydantic>=2.12.5",
    "scipy>=1.17.1",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.10.8",
    "polars>=1.39.3",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
